# trickyCPPhomework8_gtest

./: CMakeLists.txt  conanbuildinfo.cmake  conanbuildinfo.txt  conanfile.txt  conaninfo.txt  execution-result.txt  main.cpp
